--- a/Fresh/Podfile
+++ b/Fresh/Podfile
@@ -1,5 +1,6 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '6.0'
+# platform :ios, ‘8.0’
+use_frameworks!
 
 target 'Fresh' do
 pod ‘Parse’
