--- a/Fresh/Podfile
+++ b/Fresh/Podfile
@@ -1,9 +1,10 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, ‘8.3’
+# platform :ios, ‘9.0’
 use_frameworks!
 
 target 'Fresh' do
 pod ‘Parse’
+#pod 'Reveal-iOS-SDK', :configurations => ['Debug']
 end
 
 target 'FreshTests' do
